[project]
name = "fast_ssi"
version = "0.1.0"
authors = [{ name = "Alejandro Duarte", email = "alejandroduartevendries@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "tabulate",
    "scikit-learn",
    "tqdm",
    "matplotlib",
    "numba",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["fast_ssi"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# Common if you don’t want line-length lint to be blocking (formatter may exceed it in edge cases):
ignore = ["E501"]

[tool.ruff.format]
# These match Ruff’s default formatter behavior (Black-like).
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = "^(tests|examples)/"
